<resources>
    <string name="continue_">Continue</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="skip">SKIP</string>
    <string name="search_address">Search address</string>
    <string name="confirm_address">Confirm address</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="passes">Passes</string>
    <string name="store">Store</string>
    <string name="about">About</string>
    <string name="amenities">Amenities</string>
    <string name="directions">Directions</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="see_all">See All</string>
    <string name="classes">Classes</string>
    <string name="all_classes">All Classes</string>
    <string name="onboarding_step_one_title">Unlimited possibilities</string>
    <string name="onboarding_step_one_description">Book your classes get discounts and connect
                                                    to the fitness community</string>
    <string name="onboarding_step_two_title">Book classes</string>
    <string name="onboarding_step_two_description">Cronut asymmetrical yuccie 3 wolf moon
                                                    semiotics put a bird on it plaid.</string>
    <string name="onboarding_step_three_title">Buy GYM Passes</string>
    <string name="onboarding_step_three_description">Lorem Ipsum is simply dummy text of the
                                                    printing and typesetting industry.</string>
    <string name="onboarding_step_four_title">Memberships and Subscriptions</string>
    <string name="onboarding_step_four_description">There are many variations of passages of Lorem Ipsum available, but the majority
                                                    have suffered alteration in some form, by injected humour</string>
    <string name="auth_register_title_">Create account</string>
    <string name="auth_page_title_">Get access to member exclusive products, world-class experts and instant benefits</string>
    <string name="auth_register_input_phone">Enter your mobile number we will sent you an OTP  to validate the phone number</string>
    <string name="auth_login_input_phone">Login using your phone number will send you an OTP</string>
    <string name="auth_enter_otp_title">Enter the OTP code you recived</string>
    <string name="edt_hint_first_name">First name</string>
    <string name="edt_hint_email">Email</string>
    <string name="edt_hint_password">Password</string>
    <string name="new_account_creation_register_agree">By continuing, you agree to our</string>
    <string name="new_account_creation_register_terms">Terms and Conditions</string>
    <string name="login_page_title_text">Get access to member exclusive products, world-class experts and instant benefits.</string>
    <string name="login_page_continue_with_email">→ Continue with Email</string>
    <string name="login_page_forgot_password">→ Forgot password</string>
    <string name="homepage_title">Glad to see you!</string>
    <string name="homepage_description">Book your classes, get discounts and get connect to the fitness community</string>
    <string name="profile_medical_">Medical ID</string>
    <string name="profile_favourite">Favourite Classes</string>
    <string name="profile_subscriptions">Passes and Subscriptions</string>
    <string name="profile_payment">Payment</string>
    <string name="profile_transactions">Transaction History</string>
    <string name="profile_settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_support">Support</string>
    <string name="settings_about">About</string>
    <string name="settings_preferences">Unit and Date preferences</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_messages">Messages and Support Center</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_terms">Terms of User and Privacy Policy</string>
    <string name="settings_acknowledgements">Acknowledgements</string>
    <string name="settings_rate">Rate us on Play Store</string>
    <string name="settings_version">App version</string>
    <string name="settings_website">Website</string>
    <string name="settings_sign_out">Sign Out</string>
    <string name="turn_on_location_services">Turn <b>ON</b> <font color="#1F2432"><b>Location services</b></font> so that <b>COFE App</b> can show COFE Shops near you</string>
    <string name="place_the_pin_at_your_location">Place the pin at your location</string>
    <string name="addresses_select_address">Pinpoint Your Location</string>
    <string name="dialog_app_location">This app wants to use your location</string>
    <string name="homepage_nearby_gyms">Nearby Gyms</string>
    <string name="homepage_view_map">View map</string>
    <string name="homepage_gyms_nearby">%1$s Gyms Nearby</string>
    <string name="homepage_store_title">Shop</string>
    <string name="homepage_video_title">Video</string>
    <string name="homepage_store_description">Equipment and food supplements</string>
    <string name="homepage_video_description">On Demand</string>
    <string name="mapview_search_view">Search for a Gym</string>
    <string name="mapview_gym_distance">%1$s km</string>
    <string name="call_gym">Call gym</string>
    <string name="buy_membership">Buy membership</string>
    <string name="forgot_password_title_text">Enter your account email address</string>
    <string name="forgot_password_resent_text">An email was sent to the %1$s containing a link to reset your password</string>
    <string name="forgot_password_open_email">Open Email App</string>
    <string name="buy_membership_">Buy your membership</string>
    <string name="buy_pass">Buy a Pass</string>
    <string name="buy_pass_description">Buy your passes, get discounts \nand connect to the fitness community.</string>
    <string name="buy_membership_description">Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,</string>
    <string name="select_membership">Select your membership</string>
    <string name="select_pass">Select your pass</string>
    <string name="difficulty">Difficulty</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="spots_available">Spots Available:</string>
    <string name="duration">Duration:</string>
    <string name="price">Price:</string>
    <string name="no_classes">No classes available.</string>
    <string name="instructor">Instructor</string>
    <string name="difficulty_beginner">Beginner</string>
    <string name="difficulty_intermediate">Intermediate</string>
    <string name="difficulty_advanced">Advanced</string>
    <string name="estimate_cals_burned">est. %1$s cals </string>
    <string name="book_spot">Book a Spot</string>
    <string name="no_saved_credit_cards">Looks like you have not saved any <b>Credit Cards</b></string>
    <string name="save_cc">Save Credit Card</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_cvc">CVV/CVC</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="card_date_error">Wrong date</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="card_is_expired">Card is expired</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="invalid_name">Invalid name</string>
    <string name="medical_form_page_title">Medical ID</string>
    <string name="input_field_error_msg">This field is mandatory</string>
    <string name="form_saved">Form saved successfully</string>
    <string name="store_title_name">Gym Store</string>
    <string name="store_description">Description</string>
    <string name="store_customer_also_viewed">Customers Also Viewed</string>
    <string name="store_add_to_cart">Add to cart </string>
    <string name="store_proceed_checkout">Proceed to Checkout</string>
    <string name="store_choose_delivery">Choose Delivery Address</string>
    <string name="store_items">Items in your order</string>
    <string name="store_checkout_subtotal">Subtotal</string>
    <string name="store_checkout_shipping">Shipping Fee</string>
    <string name="store_checkout_amount_due">Amount Due</string>
    <string name="store_availability">Availability</string>
    <string name="store_warranty">Warranty</string>
    <string name="store_returns">Returns</string>
    <string name="store_in_stock">in stock</string>
    <string name="store_out_of_stock">This item is currently unavailable</string>
    <string name="store_view_cart">View Cart</string>
    <string name="store_items_in_cart">%1$s items</string>
    <string name="store_shopping_cart">Shopping cart</string>
    <string name="store_cart_subtotal">Subtotal</string>
    <string name="store_out_stock">Out of stock</string>
    <string name="add_product_sold_out">Sold out</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="edit_user_profile">Edit Profile</string>
    <string name="edit_user_profile_first_name">First Name</string>
    <string name="edit_user_profile_last_name">Last Name</string>
    <string name="edit_user_profile_email">Email Address</string>
    <string name="edit_user_profile_phone">Phone</string>
    <string name="edit_user_profile_birthday">Birthday</string>
    <string name="edit_user_profile_password">Password</string>
    <string name="user_profile_verified">Verified</string>
    <string name="user_profile_terms">Terms and Conditions</string>
    <string name="user_profile_not_verified">Not verified</string>
    <string name="user_profile_credits">You have %1$s %2$s in COFE Credits</string>
    <string name="update_photo">Update photo</string>
    <string name="edt_hint_last_name">Last name</string>
    <string name="user_profile_update_password_old">Old Password</string>
    <string name="user_profile_update_password_new">New Password</string>
    <string name="user_profile_update_password_update">Update Password</string>
    <string name="error_phone_wrong_validation">Error phone validation</string>
    <string name="new_account_creation_invalid_otp">Error OTP validation</string>
    <string name="error_unknown">An Error Occurred</string>
    <string name="medical_form_info_text">A medical ID provides medical information about you that may be important in an emergency, like allergies and medical conditions.</string>
    <string name="store_product_details_no_return">No return</string>
    <string name="error_firstname_wrong_validation">Provide First Name</string>
    <string name="error_lastname_wrong_validation">Provide Last Name</string>
    <string name="error_email_wrong_validation">Invalid Email</string>
    <string name="error_password_wrong_validation">Invalid Password Use Min 6 Characters</string>
    <string name="error_invalid_voucher_code">Invalid coupon code</string>
    <string name="error_invalid_voucher_code_redemption_limit">Coupon code is no longer valid</string>
    <string name="error_invalid_subtotal_order_value">Subtotal order value must be at least %1$s</string>
    <string name="error_invalid_for_customer">This code does not exist or is no longer valid</string>
    <string name="error_invalid_verify_email">Please verify your email to use this coupon</string>
    <string name="error_required_field">This field is required</string>
    <string name="file_provider_authority">gym.file.provider.authority</string>
</resources>