<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:background="@drawable/dialog_inset_background"
    android:layout_height="wrap_content">

    <TextView
        style="@style/FontLocalizedBold"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/red001"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/FontLocalizedMedium"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="6dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/dialog_app_location"
        android:textColor="@color/red001"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/noTv"
        style="@style/FontLocalizedMedium"
        android:layout_width="0dp"
        android:textSize="17sp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="82dp"
        android:text="@string/no"
        android:textColor="@color/md_blue_500"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/yesTv"
        style="@style/FontLocalizedMedium"
        android:layout_width="0dp"
        android:textSize="17sp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="82dp"
        android:text="@string/yes"
        android:textColor="@color/md_blue_500"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>