<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/settings_general"
                android:textAllCaps="true"
                android:textColor="@color/blue001" />

            <LinearLayout
                android:id="@+id/preferencesContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_preferences"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_privacy"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/settings_support"
                android:textAllCaps="true"
                android:textColor="@color/blue001" />

            <LinearLayout
                android:id="@+id/messagesContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_messages"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/faqContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_faq"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/termsContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_terms"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/settings_about"
                android:textAllCaps="true"
                android:textColor="@color/blue001" />

            <LinearLayout
                android:id="@+id/acknowledgmentsContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_acknowledgements"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rateContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_rate"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/appVersionContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_version"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    android:tint="@color/red001"
                    tools:text="1.0.0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/websiteContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_website"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:tint="@color/red001" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signOutContainer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_darkblue_round_corners"
                android:gravity="center_vertical"
                android:padding="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/settings_sign_out"
                    android:textColor="@color/red001" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>